# PyScrAI

./: .env  .gitignore  Database_Team_Communication.md  Engine_Team_Communication.md  Instructions.txt  PyScrAI.code-workspace  README.md  agno_transition.md  blueprint.md  completed_development.md  coverage.xml  engine_database_coordination_DATABASE_TEAM.md  engine_database_corordination_ENGINE_TEAM.md  main.py  pyproject.toml  pytest.ini  requirements_phase1.txt  setup_database.py  test_phase1.py  test_validation.py
.docs/: .commands.md
.github/instructions/: pyscrai.instructions.md
agno/ango_my_examples/: agent_agno_docs.py  agentica.py
agno/ango_my_examples/agents/: embed.py  mcp.py  rerank.py
agno/cookbook/agents_from_scratch/: agent_with_knowledge.py  agent_with_storage.py  agent_with_tools.py  agno_assist.py  simple_agent.py
agno_cookbook/tools/: baidusearch_tools.py  fal_tools.py
agno_cookbook/workflows/content_creator/: scheduler.py  workflow.py
agno_repository/libs/agno/agno/: debug.py  exceptions.py
agno_repository/libs/agno/agno/agent/: __init__.py  agent.py  metrics.py
agno_repository/libs/agno/agno/api/: agent.py  api.py  evals.py  playground.py  team.py  user.py  workspace.py
agno_repository/libs/agno/agno/app/: utils.py
agno_repository/libs/agno/agno/cli/: auth_server.py  config.py  console.py  credentials.py  entrypoint.py  operator.py  settings.py
agno_repository/libs/agno/agno/document/: __init__.py  base.py
agno_repository/libs/agno/agno/embedder/: __init__.py  aws_bedrock.py  azure_openai.py  cohere.py  fastembed.py  fireworks.py  google.py  huggingface.py  mistral.py  ollama.py  openai.py  sentence_transformer.py  together.py  voyageai.py
agno_repository/libs/agno/agno/eval/: accuracy.py  performance.py  reliability.py  utils.py
agno_repository/libs/agno/agno/file/: __init__.py  file.py
agno_repository/libs/agno/agno/knowledge/: __init__.py  agent.py  arxiv.py  combined.py  csv.py  csv_url.py  document.py  docx.py  firecrawl.py  json.py  langchain.py  llamaindex.py  pdf.py  pdf_url.py  text.py  url.py  website.py  wikipedia.py  youtube.py
agno_repository/libs/agno/agno/memory/: __init__.py  agent.py  classifier.py  manager.py  summarizer.py  team.py  workflow.py
data/: .gitkeep  pyscrai.db  pyscrai.db-shm  pyscrai.db-wal
docs/: Development_Plan_UPDATED.md  Full_Scenario_Run_Description.md  Inter-Agent_Communication_UPDATED.md  README.md  StageII_dev_plan.md  agno_transition.md  inter-agent-communication_test.md  long_context_development_plan.md
docs/Project_Documentation/: engine_api.md
docs/api/: README.md
docs/development_notes/: Current_Development_Plan.md
docs/guides/: README.md  database_architecture.md  engines.md  getting_started.md
pyscrai/: # PyScrAI Project Sync State - 2025-05-2.md  __init__.py  __init__py  llm_factory.py  pytest.ini  test_alembic.ini
pyscrai/Agno_ScrAI/: agent_combined_gnosis.py
pyscrai/Agno_ScrAI/agents/: filesystem.py
pyscrai/core/: __init__.py  models.py
pyscrai/databases/: __init__.py  alembic.ini  connection.py  database.md  database.py  dev_api.md
pyscrai/databases/alembic/: env.py
pyscrai/databases/alembic/versions/: 2024_05_25_002_add_engine_states.py  c15179238652_create_initial_tables.py
pyscrai/databases/api/: __init__.py  app.py  engine_endpoints.py  main.py
pyscrai/databases/api/routes/: engine.py  engine_endpoint.py  runner_endpoint.py  scenarios.py  templates.py
pyscrai/databases/models/: __init__.py  agent_models.py  base.py  core_models.py  engine_models.py  engine_models_backup.py  event_models.py  execution_models.py  log_models.py  scenario_models.py  schemas.py  template_validators.py
pyscrai/databases/seeds/: __init__.py  event_types.json  seed_data.py
pyscrai/databases/tests/: conftest.py  test_engine_api.py
pyscrai/docs/: Development_Plan.md  Full_Run_explanation.md  Inter-Agent_Communication.md  completed_development.md
pyscrai/docs/database/: database_setup.md
pyscrai/engines/: __init__.py  actor_engine.py  agent_runtime.py  analyst_engine.py  base_engine.py  context_manager.py  integration_layer.py  memory_system.py  narrator_engine.py  scenario_runner.py  tool_integration.py
pyscrai/engines/orchestration/: __init__.py  engine_manager.py  event_bus.py  execution_pipeline.py  state_manager.py
pyscrai/factories/: __init__.py  agent_factory.py  llm_factory.py  scenario_factory.py  template_manager.py
pyscrai/llm/: __init__.py  base_llm.py
pyscrai/scripts/: README.md  active_scenarios.py  dispatch_live_event.py  event_send.md  init_db.py  monitor_scenario.py  scenario_execute_from_template.py  scenario_integration.py  template_manager.py
pyscrai/scripts/archive/: send_scenario_event.py  start_scenario.py  test_scenario_integration.py
pyscrai/templates/: README.md
pyscrai/templates/agents/: actor_agent.json  generic_actor.json  generic_analyst.json  generic_narrator.json  narrator.json  narrator_agent.json  pope_leo_xiii.json
pyscrai/templates/scenarios/: basic_adventure.json  generic_conversation.json  supernatural_vision.json
pyscrai/tests/: conftest.py  test_base_engine.py  test_database.py  test_llm_factory.py  test_template_manager.py  test_template_system_updated.py  test_updated_template_system.py
pyscrai/utils/: __init__.py  config.py
tests/: README.md  conftest.py  template_schema_engine_validation  test_api_app.py  test_basic.py  test_database.py  test_engine_api.py  test_engine_integration.py  test_engine_integration_debug.py.bak  test_engines.py  test_factories.py  test_integration.py  test_inter_agent.py  test_llm_factory.py  test_schema_validation.py  test_template_api_fixed.py  test_template_system.py  test_updated_template_system.py
tests/test_setup_scripts/: setup_database.py  test_events_setup.py
(+322 files in other folders)
