[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscrai"
version = "0.1.0"
description = "PyScrAI - Python Scripted AI Engine System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tyler", email = "your-email@example.com" }
]
keywords = ["ai", "engine", "scripting", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx",
    "agno",
    "pydantic",
    "sqlalchemy",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"